# oklab-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  pyproject.toml
benchmarks/: CMakeLists.txt  OklabBenchmark.cpp
examples/: CMakeLists.txt  main.cpp
include/: ColorConversions.h  ColorManipulations.h  ColorTypes.h
src/: CMakeLists.txt  ColorConversions.cpp  ColorConversionsInternal.h  ColorConversionsInternals.cpp  ColorUtils.cpp  ColorUtils.h  MathUtils.cpp  MathUtils.h  MatrixOperations.cpp  MatrixOperations.h  OkLxx.cpp  OkLxx.h  Oklab.cpp  Oklab.h  P3.cpp  RGB.cpp  main.cpp
src/gamutMapping/: CSS4.h
tests/: CMakeLists.txt  CustomMatchers.h  OklabTests.cpp  p3ToRgbVectorsTests.cpp  validRoundTripsTests.cpp
