[tool.poetry]
name = "oklab"
version = "0.1.0"
description = "A modern cpp implementation of oklab color"
authors = ["Tycho Tatitscheff <tychot@bam.tech>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
conan = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
